--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "express": "^4.17.2",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,7 +16,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "redux-persist": "^6.0.0"
+    "react-scroll-to-bottom": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
