--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
