--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
