--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
